minor codestyle refactoring